@@ -1,3 +1,11 @@
+2012-03-22  Jakub Jelinek  <jakub@redhat.com>
+
+	Backported from mainline
+	2012-03-13  Jakub Jelinek  <jakub@redhat.com>
+ 
+	PR c/52577
+	* gcc.dg/Wunused-var-3.c: New test.
+
 2012-03-22  Release Manager
 
 	* GCC 4.7.0 released.
